Change text color to black in index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ body{
     overflow:hidden;
     font-family:Arial;
     text-align:center;
-    background:linear-gradient(135deg,#ff4e8a,#ff99cc);
-    color:white;
+    background: linear-gradient(135deg,#ff4e8a,#ff99cc);
+    color:black;
 }
 
 .container{
