Change font and background color in yes.html

--- a/yes.html
+++ b/yes.html
@@ -10,8 +10,8 @@ body{
     padding:0;
     overflow:hidden;
     text-align:center;
-    font-family:Arial;
-    background:black;
+    font-family: 'Poppins', sans-serif;
+    background:pink;
     color:white;
 }
 
