Change font family to 'Poppins' in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ body{
     margin:0;
     padding:0;
     overflow:hidden;
-    font-family:Arial;
+    font-family: 'Poppins', sans-serif;
     text-align:center;
-    background: linear-gradient(135deg,#ff4e8a,#ff99cc);
+    background:linear-gradient(135deg,#ff4e8a,#ff99cc);
     color:black;
 }
 
